--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
+    "marked": "https://aistudiocdn.com/marked@^17.0.0"
   }
 }
 </script>
@@ -19,5 +20,6 @@
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen antialiased text-gray-800">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 </html>
