--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
 </script>
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen antialiased text-gray-800">
+    <script>
+      let preferredLang = localStorage.getItem('language');
+
+      if (!preferredLang) {
+        // If no language preference is stored, try to detect from browser
+        const browserLang = navigator.language.toLowerCase();
+        if (browserLang.startsWith('zh')) {
+          preferredLang = 'zh';
+        } else {
+          preferredLang = 'en'; // Default to English if browser language is not Chinese
+        }
+        localStorage.setItem('language', preferredLang); // Store the detected preference
+      }
+
+      document.documentElement.lang = preferredLang;
+    </script>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
