fix: Use relative path for index.tsx in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       document.documentElement.lang = preferredLang;
     </script>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 </html>
